class5 - k8s resources/full-deploy.yaml
## namespace yaml file
apiVersion: v1
kind: Namespace
metadata:
  name: dev
---
## service yaml file
# 1. ClusterIP - Internal Communication
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: dev
spec:
  type: ClusterIP
  selector:
    app: demo
  ports:
    - port: 80
      targetPort: 80
---
# 2. NodePort - Simple External Access
apiVersion: v1
kind: Service
metadata:
  name: app-nodeport
  namespace: dev
spec:
  type: NodePort
  selector:
    app: demo
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
---
# 3. LoadBalancer - Cloud External Access
apiVersion: v1
kind: Service
metadata:
  name: app-lb
  namespace: dev
spec:
  type: LoadBalancer
  selector:
    app: demo
  ports:
    - port: 80
      targetPort: 80
---
## deployment yaml file
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
        - name: app
          image: nginx
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
---
